# transcribe

./: Cargo.toml  README.md
gstreamer-playground/: Cargo.toml
my-first-filter/: Cargo.toml  build.rs
my-first-filter/src/: lib.rs  rgb_2_gray.rs
