[package]
name = "gstreamer-playground"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }